   
===========
Changes log  
===========

- @version-full@ (@release-date@)
    - Enhancements
      -        

    - API changes
      -        

    - Bugs fixed
      -        
	  
	- Misc
	  - 

- 2.3 Milestone 5 (11/07/2014)
    - Enhancements
      - Added support of GWT 2.7. Contributed by Koen.
      - Enhanced introspection of Restlet and Jaxrs based applications in 
        conjunction with Swagger and Raml annotations.
      - Added APISpark agent service.

    - API changes
      - Jackson representation now ignore null values by default in the
        JSON/XML/CSV/YAML produced, leading to more compact representations.
      - Added additional constructors to Status and ResourceException for convenience
        purpose. Suggested by Kristoffer Gronowski.

- 2.3 Milestone 4 (10/31/2014)
    - Enhancements
      - Unified the HTTP client connector parameters (socket connection to 15s, 
        idle socket to 60s, socket stop to 60s, max connections per host to 10, 
        max total connections to 20). Suggested by Kristoffer Gronowski.
      - Upgraded Jackson to version 2.4.3.
      - Jackson representation now ignore empty value (null or empty collections)
        by default in the JSON/XML/CSV/YAML produced, leading to more compact 
        representations.
     - Fixed log level (issue #777). Reported by marcus-nl.

    - API changes
      - Deprecated statusService property in Component to keep it only in Application.
      - Added connegService, metadataService and converterService properties to StatusService
        and pass them via the constructor instead of the toRepresentation and toStatus methods.
      - Renamed @Status#serializeProperties (default to false) into serialize (default to true).
      - Deprecated Component#statusService in favor of the Application#statusService property.

    - Bugs fixed
      - @Status now works with annotated methods on the server-side.
      - Securing JaxRepresentation by default (issue #785).